[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/GamePause.gd" type="Script" id=1]
[ext_resource path="res://Scripts/SaveGameConfirm.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Inventory/InventoryView.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/cmu-typewriter/Typewriter.tres" type="DynamicFont" id=4]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.368627 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 542.0
margin_top = 278.0
margin_right = 738.0
margin_bottom = 441.0

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 196.0
margin_bottom = 31.0
text = "Menu
"
align = 1

[node name="Continue" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 196.0
margin_bottom = 55.0
text = "Continue"

[node name="Inventory2" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 59.0
margin_right = 196.0
margin_bottom = 79.0
text = "Inventory"

[node name="SaveGame" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 83.0
margin_right = 196.0
margin_bottom = 103.0
text = "Save game *"

[node name="popupSave" type="AcceptDialog" parent="CenterContainer/VBoxContainer/SaveGame"]
margin_left = 477.0
margin_top = 321.0
margin_right = 808.0
margin_bottom = 397.0
dialog_text = "                         Game was saved"

[node name="ExitBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 107.0
margin_right = 196.0
margin_bottom = 127.0
text = "Exit *"

[node name="SaveGameConfirm" type="ConfirmationDialog" parent="CenterContainer/VBoxContainer/ExitBtn"]
margin_left = 535.0
margin_top = 318.0
margin_right = 749.0
margin_bottom = 413.0
mouse_filter = 2
dialog_text = "              Save game?"
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 196.0
margin_bottom = 163.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = -4
custom_fonts/font = ExtResource( 4 )
text = "*When saving only the money 
in the bank will be saved."
align = 1

[node name="Inventory" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = 344.0
margin_top = 68.0
margin_right = 344.0
margin_bottom = 68.0

[connection signal="pressed" from="CenterContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Inventory2" to="." method="_on_Inventory_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SaveGame" to="." method="_on_SaveGame_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ExitBtn" to="." method="_on_ExitBtn_pressed"]
[connection signal="confirmed" from="CenterContainer/VBoxContainer/ExitBtn/SaveGameConfirm" to="CenterContainer/VBoxContainer/ExitBtn/SaveGameConfirm" method="_on_SaveGameConfirm_confirmed"]
[connection signal="visibility_changed" from="CenterContainer/VBoxContainer/ExitBtn/SaveGameConfirm" to="CenterContainer/VBoxContainer/ExitBtn/SaveGameConfirm" method="_on_SaveGameConfirm_visibility_changed"]
